# parallel_programming_moment

./: CMakeLists.txt  instruction.md  mainParallel
lab3/: Vorob_Gr36_1_LR3.docx  mainParallel.cpp  mainParallelOmp1  mainParallelOmp16  mainParallelOmp2  mainParallelOmp4  mainParallelOmp8
lab4/: Vorob_Gr36_1_LR4.docx  main.cpp  mainOmp1for1000  mainOmp1for20000  mainOmp1for5000  mainOmp2for1000  mainOmp2for20000  mainOmp2for5000  mainOmp4for1000  mainOmp4for20000  mainOmp4for5000  mainOmp6for1000  mainOmp6for20000  mainOmp6for5000  mainOmp8for1000  mainOmp8for20000  mainOmp8for5000
lab5/: Vorob_Gr36_1_LR5.docx
lab5/hoar/: main.cpp  mainOmp100  mainOmp1000000  mainOmp200000  mainOmp50000  mainOmp500000
lab5/shell/: main.cpp  mainOmp100000  mainOmp1000000  mainOmp3000000
lab6/: Vorob_Gr36_1_LR6.docx  main.cpp  mainOmp1000  mainOmp2000  mainOmp500
